force-app/main/default/objects/Plan_Snapshot__c/Plan_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Point-in-time snapshot of an Account Plan's headroom metrics, for QBR trend reporting (architecture §10).</description>
    <label>Plan Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{000000}</displayFormat>
        <label>Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>