force-app/main/default/objects/Plan_Snapshot__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External Key</label>
    <description>planId|date — guarantees one snapshot per plan per day; enables idempotent upsert.</description>
    <type>Text</type>
    <length>120</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>