force-app/main/default/objects/Plan_Snapshot__c/fields/Family_Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Family_Coverage_Pct__c</fullName>
    <label>Family Coverage %</label>
    <description>Family coverage captured at snapshot time.</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>