force-app/main/default/objects/Plan_Snapshot__c/fields/Headroom__c.field-meta.xml
<CustomField>
    <fullName>Headroom__c</fullName>
    <label>Headroom</label>
    <description>Gap-to-benchmark headroom captured at snapshot time.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>