force-app/main/default/objects/Plan_Snapshot__c/fields/Owned_ARR_Cells__c.field-meta.xml
<CustomField>
    <fullName>Owned_ARR_Cells__c</fullName>
    <label>Owned Cells</label>
    <description>Count of cells with owned ARR at snapshot time.</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>