force-app/main/default/objects/Plan_Snapshot__c/fields/Plan_Tier__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tier__c</fullName>
    <label>Plan Tier</label>
    <description>Plan tier captured at snapshot time (for trend slicing).</description>
    <type>Text</type>
    <length>10</length>
</CustomField>