force-app/main/default/objects/Plan_Snapshot__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <description>Segment captured at snapshot time (for trend slicing).</description>
    <type>Text</type>
    <length>40</length>
</CustomField>