force-app/main/default/objects/Plan_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <label>Snapshot Date</label>
    <description>As-of date this snapshot captured the plan's metrics.</description>
    <type>Date</type>
    <required>true</required>
</CustomField>