force-app/main/default/objects/Plan_Snapshot__c/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <label>Total ARR</label>
    <description>Owned ARR roll-up captured at snapshot time.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>