force-app/main/default/objects/Plan_Snapshot__c/fields/Whitespace_Cells__c.field-meta.xml
<CustomField>
    <fullName>Whitespace_Cells__c</fullName>
    <label>White-Space Cells</label>
    <description>Count of addressable white-space cells at snapshot time.</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>